--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                             <ol class="product-items widget-product-grid">
                                                                 <li class="product-item">
                                                                     <div class="product-item-info">
-                                                                        <a href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
+                                                                        <a href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-35701">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -428,7 +428,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1"
-                                       href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
+                                       href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1                                    </a>
                                 </strong>
@@ -1859,7 +1859,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <ol class="product-items widget-product-grid">
                                                 <li class="product-item">
                                                     <div class="product-item-info">
-                                                        <a href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
+                                                        <a href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-35701">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -1896,7 +1896,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1"
-                                       href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
+                                       href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1                                    </a>
                                 </strong>
