--- a/quan-jean-rach-goi-skinny-10f20dpa101cr1.html
+++ b/quan-jean-rach-goi-skinny-10f20dpa101cr1.html
@@ -6451,7 +6451,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         { "*": { "Magento_Customer/js/invalidation-processor": { "invalidationRules": { "website-rule": { "Magento_Customer/js/invalidation-rules/website-rule": { "scopeConfig": { "websiteId": "1" } } } } } } }
                                     </script>
                                     <script type="text/x-magento-init">
-                                        { "body": { "pageCache": {"url":"https:\/\/routine.vn\/page_cache\/block\/render\/id\/35701\/","handles":["default","catalog_product_view","catalog_product_view_id_35701","catalog_product_view_sku_10F20DPA101CR1","catalog_product_view_type_configurable","blog_css","mpseo_remove_schema"],"originalRequest":{"route":"catalog","controller":"product","action":"view","uri":"\/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"},"versionCookieName":"private_content_version"}
+                                        { "body": { "pageCache": {"url":"https:\/\/routine.vn\/page_cache\/block\/render\/id\/35701\/","handles":["default","catalog_product_view","catalog_product_view_id_35701","catalog_product_view_sku_10F20DPA101CR1","catalog_product_view_type_configurable","blog_css","mpseo_remove_schema"],"originalRequest":{"route":"catalog","controller":"product","action":"view","uri":"/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"},"versionCookieName":"private_content_version"}
                                         } }
                                     </script>
                                     <script type="text/x-magento-init">
