--- a/index.html
+++ b/index.html
@@ -238,23 +238,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="header-menu-sticky">
                     <ul>
                         <li id="thoi-trang-nam.html">
-                            <a href="/thoi-trang-nam.html">
+                            <a href="https://routine.vn/thoi-trang-nam.html">
                         NAM                    </a>
                         </li>
                         <li id="thoi-trang-nu.html">
-                            <a href="/thoi-trang-nu.html">
+                            <a href="https://routine.vn/thoi-trang-nu.html">
                         NỮ                    </a>
                         </li>
                         <li id="new-arrivals.html">
-                            <a href="/new-arrivals.html">
+                            <a href="https://routine.vn/new-arrivals.html">
                         NEW                    </a>
                         </li>
                         <li id="mua-jeans-tang-binh-giu-nhiet.html">
-                            <a href="/mua-jeans-tang-binh-giu-nhiet.html">
+                            <a href="https://routine.vn/mua-jeans-tang-binh-giu-nhiet.html">
                         NEW ENERGY                    </a>
                         </li>
                         <li id="routine-sale-off.html">
-                            <a href="/routine-sale-off.html">
+                            <a href="https://routine.vn/routine-sale-off.html">
                         SALE                    </a>
                         </li>
                     </ul>
@@ -312,9 +312,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </a>
                                     </div>
                                     <ul class="search-links">
-                                        <li><a href="/thoi-trang-nam.html">NAM</a></li>
-                                        <li><a href="/thoi-trang-nu.html">NỮ</a></li>
-                                        <li><a href="/phu-kien.html">PHỤ KIỆN</a></li>
+                                        <li><a href="https://routine.vn/thoi-trang-nam.html">NAM</a></li>
+                                        <li><a href="https://routine.vn/thoi-trang-nu.html">NỮ</a></li>
+                                        <li><a href="https://routine.vn/phu-kien.html">PHỤ KIỆN</a></li>
                                     </ul>
                                     <form class="form minisearch" id="search_mini_form" action="https://routine.vn/catalogsearch/result/" method="get">
                                         <div class="field search">
@@ -391,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                             <ol class="product-items widget-product-grid">
                                                                 <li class="product-item">
                                                                     <div class="product-item-info">
-                                                                        <a href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
+                                                                        <a href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-35701">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -428,7 +428,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1"
-                                       href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
+                                       href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1                                    </a>
                                 </strong>
@@ -485,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                                 </li>
                                                                 <li class="product-item">
                                                                     <div class="product-item-info">
-                                                                        <a href="/quan-jean-tron-skinny-10s21dpaw001cr1.html" class="product-item-photo">
+                                                                        <a href="https://routine.vn/quan-jean-tron-skinny-10s21dpaw001cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-35604">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -522,7 +522,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nữ Trơn Form Skinny - 10S21DPAW001CR1"
-                                       href="/quan-jean-tron-skinny-10s21dpaw001cr1.html"
+                                       href="https://routine.vn/quan-jean-tron-skinny-10s21dpaw001cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nữ Trơn Form Skinny - 10S21DPAW001CR1                                    </a>
                                 </strong>
@@ -534,7 +534,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="reviews-actions">
-                                                                                    <a class="action view" href="/quan-jean-tron-skinny-10s21dpaw001cr1.html#reviews">1                &nbsp;<span>Đánh giá                </span>
+                                                                                    <a class="action view" href="https://routine.vn/quan-jean-tron-skinny-10s21dpaw001cr1.html#reviews">1                &nbsp;<span>Đánh giá                </span>
             </a>
                                                                                 </div>
                                                                             </div>
@@ -591,7 +591,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                                 </li>
                                                                 <li class="product-item">
                                                                     <div class="product-item-info">
-                                                                        <a href="/quan-jean-tron-slim-10f20dpa102cr1.html" class="product-item-photo">
+                                                                        <a href="https://routine.vn/quan-jean-tron-slim-10f20dpa102cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-33439">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -628,7 +628,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nam Trơn Form Slim - 10F20DPA102CR1"
-                                       href="/quan-jean-tron-slim-10f20dpa102cr1.html"
+                                       href="https://routine.vn/quan-jean-tron-slim-10f20dpa102cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nam Trơn Form Slim - 10F20DPA102CR1                                    </a>
                                 </strong>
@@ -640,7 +640,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="reviews-actions">
-                                                                                    <a class="action view" href="/quan-jean-tron-slim-10f20dpa102cr1.html#reviews">1                &nbsp;<span>Đánh giá                </span>
+                                                                                    <a class="action view" href="https://routine.vn/quan-jean-tron-slim-10f20dpa102cr1.html#reviews">1                &nbsp;<span>Đánh giá                </span>
             </a>
                                                                                 </div>
                                                                             </div>
@@ -697,7 +697,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                                 </li>
                                                                 <li class="product-item">
                                                                     <div class="product-item-info">
-                                                                        <a href="/quan-jean-tron-skinny-10f20dpa100cr1.html" class="product-item-photo">
+                                                                        <a href="https://routine.vn/quan-jean-tron-skinny-10f20dpa100cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-33416">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -734,7 +734,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nam Trơn Form Skinny - 10F20DPA100CR1"
-                                       href="/quan-jean-tron-skinny-10f20dpa100cr1.html"
+                                       href="https://routine.vn/quan-jean-tron-skinny-10f20dpa100cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nam Trơn Form Skinny - 10F20DPA100CR1                                    </a>
                                 </strong>
@@ -898,7 +898,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <ul class="nav-exploded explodedmenu">
 
                                 <li class="itemMenu subparent  has-children">
-                                    <a href="/thoi-trang-nam.html" style="" target=_ self>
+                                    <a href="https://routine.vn/thoi-trang-nam.html" style="" target=_ self>
             <span style="position: relative; display: inline-block; hover: color: #ffffff;;">
                 
                                     <span>NAM</span>
@@ -915,7 +915,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <ul class="itemsubmenu">
 
                                                 <li class="itemMenu   ">
-                                                    <a href="/thoi-trang-nam.html" style="" target=_ self>
+                                                    <a href="https://routine.vn/thoi-trang-nam.html" style="" target=_ self>
             <span style="position: relative; display: inline-block; hover: color: #ffffff;;">
                 
                                     <span>XEM TẤT CẢ</span>
@@ -1859,7 +1859,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <ol class="product-items widget-product-grid">
                                                 <li class="product-item">
                                                     <div class="product-item-info">
-                                                        <a href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
+                                                        <a href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html" class="product-item-photo">
                                 <span class="product-image-container product-image-container-35701">
     <span class="product-image-wrapper">
         <img class="product-image-photo"
@@ -1896,7 +1896,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                                             <strong class="product-item-name">
                                     <a title="Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1"
-                                       href="/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
+                                       href="https://routine.vn/quan-jean-rach-goi-skinny-10f20dpa101cr1.html"
                                        class="product-item-link">
                                         Quần Jean Nam Rách Gối Form Skinny - 10F20DPA101CR1                                    </a>
                                 </strong>
